# llmtape

./: .gitignore  README.md  SOW.md  pyproject.toml  smoke_test.py
.github/workflows/: ci.yml
src/llmtape/: __init__.py  __main__.py  _cassette.py  _config.py  _errors.py  _extract.py  cli.py
tests/: test_core.py
