[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "llmtape"
version = "0.1.0"
description = "Record and replay LLM API calls in tests — zero cost, zero flakiness"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    "pyyaml>=6.0",
    "click>=8.0",
    "rich>=13.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "openai>=1.0",
    "anthropic>=0.20",
]

[project.scripts]
llmtape = "llmtape.cli:cli"

[tool.hatch.build.targets.wheel]
packages = ["src/llmtape"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.llmtape]
cassette_dir = ".cassettes"
mode = "replay"
max_age_days = 30
redact = ["authorization", "api_key", "x-api-key", "openai-organization", "anthropic-auth-token"]
